api-gateway: init orgn_service.Get() endpoint
